SFDC Automation/src/objects/Survey_Assignment__c.object
<CustomObject>
    <description>Custom object created for management to distribute surveys to a group of employees based on the following criteria:  date range, number of surveys per day for assignment, and the type of survey.</description>
    <fields>
        <fullName>Assignment_End_Date__c</fullName>
        <description>Date the assignment should end.</description>
        <inlineHelpText>Date the assignment should end.</inlineHelpText>
        <label>Assignment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assignment_Start_Date__c</fullName>
        <description>Date to start the assignment</description>
        <inlineHelpText>Date the assignment should start</inlineHelpText>
        <label>Assignment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Activities__c</fullName>
        <description>The number of survey activities that can be assigned within a given day.  Agents should not have more than this number assigned to them</description>
        <inlineHelpText>The number of survey activities that will be distributed in a given day.</inlineHelpText>
        <label>Number of Activities</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Users__c</fullName>
        <description>The number of users that will be assigned survey activities.</description>
        <inlineHelpText>The number of users that will be assigned survey activities.</inlineHelpText>
        <label>Number of Users</label>
        <summaryFilterItems>
            <field>Survey_Assignment_Member__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Survey_Assignment_Member__c.Survey_Assignment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Survey_Sub_Type__c</fullName>
        <description>Identifies the type of survey that is being conducted.</description>
        <inlineHelpText>Identifies the type of survey that is being conducted.</inlineHelpText>
        <label>Survey Sub-Type</label>
        <picklist>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAFETY-KLEEN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Type__c</fullName>
        <label>Survey Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Sat Survey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Survey Assignment</label>
    <nameField>
        <displayFormat>SA-{0000}-{mmddyyyy}</displayFormat>
        <label>Survey Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>